--- a/최성연/260113.md
+++ b/최성연/260113.md
@@ -1,7 +1,12 @@
 
 ## 2026.01.13
 
-### 1. 프로젝트 기획 구체화 회의
+### 1. 프로젝트 기획을 위한 설문조사 진행
+- 오픽 경험과 관련한 페인 포인트를 분석하기 위해 설문조사 질문지 작성
+- 오픽 시험 경험이 있는 싸피생 및 기타 학생 대상으로 설문조사 진행
+- 약 60명 대상
+
+### 2. 프로젝트 기획 구체화 회의
 
 주제 선정 : OPIc 시험 준비를 도와주는 AI 튜터 서비스
 
@@ -64,9 +69,9 @@
         - 논리 구조 및 내용
     ```
 
-### 2. 코치 기획 세션 수강
+### 3. 코치 기획 세션 수강
 - 서비스 기획 회의를 위해 기획을 위해 필요한 준비 및 과정에 대해 정리
 - 해당 세션을 기반으로 기획 회의 진행
 
-### 3. 코딩테스트 스터디
+### 4. 코딩테스트 스터디
 - 2문제 1.5시간 내에 풀이
