--- a/최성연/260114.md
+++ b/최성연/260114.md
@@ -85,10 +85,11 @@
 
 5) 화면 단위 / 기능 단위 쪼개기
 
-- 피그마 활용 화면 단위 기능 정의 및 와이어 프레임 설계
+- 피그마 활용 화면 단위 기능 정의 및 와이어 프레임 설계(ing)
 ![alt text](image.png)
 ![alt text](image-1.png)
 ![alt text](image-2.png)
+![alt text](image-3.png)
 
 ### 2. 코딩테스트 스터디
 - 2문제 1.5시간 내에 풀이
