--- a/최성연/260114.md
+++ b/최성연/260114.md
@@ -86,9 +86,11 @@
 5) 화면 단위 / 기능 단위 쪼개기
 
 - 피그마 활용 화면 단위 기능 정의 및 와이어 프레임 설계(ing)
-![alt text](image.png)
-![alt text](image-1.png)
-![alt text](image-2.png)
+<p align="center">  
+    <img src="image.png" align="center" width="32%">  
+    <img src="image-1.png" align="center" width="32%">  
+    <img src="image-2.png" align="center" width="32%">  
+</p>
 ![alt text](image-3.png)
 
 ### 2. 코딩테스트 스터디
