--- a/김지을/260114.md
+++ b/김지을/260114.md
@@ -1,6 +1,6 @@
 1. 코딩 테스트 준비
 - 알고리즘 문제 풀이를 통해 코딩 테스트를 대비함
-- 시간, 공간 복잡도를 고려한 풀이를 연습하며 코드 개선을 진행함
+- 시간, 공간 복잡도를 고려한 풀이를 연습하며 코드를 개선함
 
 2. 기능 구체화
 - 서비스 전반의 기능을 점검하며 핵심 기능과 세부 기능을 정리함
