--- a/최성연/260114.md
+++ b/최성연/260114.md
@@ -89,9 +89,9 @@
 
 - 피그마 활용 화면 단위 기능 정의 및 와이어 프레임 설계(ing)
 <p align="center">  
-    <img src="image.png" align="center" width="32%">  
-    <img src="image-1.png" align="center" width="32%">  
-    <img src="image-2.png" align="center" width="32%">  
+    <img src="img/image.png" align="center" width="32%">  
+    <img src="img/image-1.png" align="center" width="32%">  
+    <img src="img/image-2.png" align="center" width="32%">  
 </p>
 ![alt text](image-3.png)
 
