--- a/최성연/260115.md
+++ b/최성연/260115.md
@@ -11,7 +11,8 @@
 - 유형별 모드 연습하기 기능에 대한 상세 요구사항 정의
 - 이외에 회원관리, 모의고사, 피드백 기능에 대해 팀원들과 취합하여 상호 조정하는 회의 진행
 
-<결과물>
+**<결과물>**
+
 와이어 프레임 설계(Figma)
 ![alt text](img/image-4.png)
 
