--- a/김지을/240115.md
+++ b/김지을/240115.md
@@ -1,9 +1,9 @@
 1. 코딩 테스트 대비 알고리즘 문제 풀이
 - 코딩 테스트를 대비하여 알고리즘 문제를 풀이함  
-- 문제 해결 과정에서 풀이 흐름을 정리하고, 구현 정확도를 높이는 데 집중함  
+- 문제 해결 과정에서 풀이 흐름을 정리하고 구현 정확도를 높이는 데 집중함  
 - 풀이 후에는 접근 방식과 개선할 점을 간단히 정리함
 
 2. 화면 와이어프레임 설계
-- 서비스에 필요한 화면을 정리하고, 각 화면별 주요 기능을 정의함  
+- 서비스에 필요한 화면을 정리하고 각 화면별 주요 기능을 정의함  
 - 사용자 흐름을 기준으로 화면 구성을 고민하며 와이어프레임을 설계함  
 - 추후 개발 단계에서 구현이 수월하도록 기능 단위로 구조를 정리함
