--- a/김남주/260115.md
+++ b/김남주/260115.md
@@ -10,6 +10,10 @@
 - 구글 시트를 공유하여 작업
 - 필요한 기능들을 상세히 작성
 
+## 설문조사 문항 조사
+
+오픽 예행연습 기능에서 HTML 파일을 분석해서 모든 설문문항에 대한 텍스트 추출 완료
+
 ## 알고리즘 진행
 
 - 1543 문서 검색 (해결)
